@@ -14,13 +14,13 @@ import id.ac.ui.cs.advprog.gatra.achievement.model.ActionType;
 import id.ac.ui.cs.advprog.gatra.article.repository.ArticleRepository;
 import id.ac.ui.cs.advprog.gatra.article.repository.CategoryRepository;
 import id.ac.ui.cs.advprog.gatra.auth.repository.UserRepository;
+import id.ac.ui.cs.advprog.gatra.article.monitoring.MonitoringArticle;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -32,21 +32,25 @@ public class ArticleServiceImpl implements ArticleService {
     private final ArticleMapper articleMapper;
     private final MilestoneService milestoneService;
     private final MissionProgressService missionProgressService;
+    private final MonitoringArticle monitoringArticle;
+
+    private static final String ARTICLE_ENTITY = "Article";
 
     @Override
     public List<ArticleResponse> getAllArticles() {
         return articleRepository.findAll().stream()
                 .filter(article -> !article.isDeleted())
                 .map(articleMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public ArticleResponse getArticleById(UUID id) {
-        Article article = articleRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Article", id));
+        Article article = articleRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException(ARTICLE_ENTITY, id));
         if (article.isDeleted()) {
-            throw new ResourceNotFoundException("Article", id);
+            throw new ResourceNotFoundException(ARTICLE_ENTITY, id);
         }
+        monitoringArticle.incrementArticleViewed();
         return articleMapper.toResponse(article);
 
     }
@@ -63,8 +67,9 @@ public class ArticleServiceImpl implements ArticleService {
                 .category(category)
                 .createdBy(user)
                 .build();
-
-        return articleMapper.toResponse(articleRepository.save(article));
+        Article savedArticle = articleRepository.save(article);
+        monitoringArticle.incrementArticleCreated();
+        return articleMapper.toResponse(savedArticle);
     }
 
     @Override
@@ -84,12 +89,13 @@ public class ArticleServiceImpl implements ArticleService {
     @Transactional
     public void deleteArticle(UUID id, String adminUsername) {
         Article article = articleRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Article", id));
+                .orElseThrow(() -> new ResourceNotFoundException(ARTICLE_ENTITY, id));
         if (article.isDeleted()) {
             throw new IllegalStateException("Artikel sudah dihapus pada " + article.getDeletedAt());
         }
         article.softDelete(adminUsername);
         articleRepository.save(article);
+        monitoringArticle.incrementArticleDeleted();
     }
 
     @Override
@@ -97,12 +103,12 @@ public class ArticleServiceImpl implements ArticleService {
         return articleRepository.findAll().stream()
                 .filter(Article::isDeleted)
                 .map(articleMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private Article findArticleOrThrow(UUID id) {
         return articleRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Article", id));
+                .orElseThrow(() -> new ResourceNotFoundException(ARTICLE_ENTITY, id));
     }
 
     private Category findCategoryOrThrow(UUID id) {
@@ -121,6 +127,8 @@ public class ArticleServiceImpl implements ArticleService {
         var completedMissions = missionProgressService.incrementProgress(user.getId(), "READ_ARTICLE");
         MilestoneResponse response = milestoneService.recordAction(user.getId(), ActionType.READ_ARTICLE);
         response.setCompletedMissions(completedMissions);
+
+        monitoringArticle.incrementArticleMarkedRead();
         return response;
     }
 }
